--- a/03a_data_tidyng.Rmd
+++ b/03a_data_tidyng.Rmd
@@ -28,6 +28,7 @@ mo_otutable_long <- mo_shared_table %>%
   rename_all(tolower) %>% 
   pivot_longer(-sample_id, names_to="otu", values_to="count") %>% 
   filter(count != 0)
+saveRDS(mo_otutable_long, "RDataRDS/mo_otutable_long.rds")
 
 mo_otutable <- mo_otutable_long %>%
   pivot_wider(id_cols = otu, names_from = sample_id, values_from = count) %>%
@@ -38,6 +39,7 @@ dim(mo_otutable)
 cat("\nStructure of the otutable\n")
 head(mo_otutable)[, 1:3] %>% as.data.frame()  
 saveRDS(mo_otutable, "RDataRDS/mo_otutable.rds")
+
 
 taxlevels <- c("kingdom", "phylum", "class", "order", "family", "genus")
 mo_taxonomy <- mo_cons_taxonomy %>%
@@ -56,9 +58,10 @@ cat("\nStructure of the taxonomy table\n")
 head(mo_taxonomy)[, 1:4] %>% as.data.frame() 
 saveRDS(mo_taxonomy, "RDataRDS/mo_taxonomy.rds")
 
-save(mo_otutable, mo_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
-save(mo_otutable, mo_taxonomy, file = "RDataRDS/saved_objects.RData")
+save(mo_otutable, mo_otutable_long, mo_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
+save(mo_otutable, mo_otutable_long, mo_taxonomy, file = "RDataRDS/saved_objects.RData")
 ```
+
 
 ## Creating tidy `qiime2` taxa abundance table {#qiime2-otu-taxonomy}
 - Here we read through the merged feature-taxonomy-abundance table and extract abundance at a taxon lineage.
