--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory Analysis of Microbiome Data in R"
+title: "Preprocessing of Microbiome Data"
 subtitle: "End-to-End Practical User Guides for Microbiome Data Analysis"
 author: "Teresia Mrema-Buza, A Microbiome Data Science Enthusiast and Owner of the Complex Data Insights, LLC, USA"
 date: "`r Sys.Date()`"
@@ -41,7 +41,7 @@ source(file = "R/common.R")
 if (!dir.exists("data")) {dir.create("data")}
 ```
 
-# Exploratory Analysis of Microbiome Data {-#frontpage}
+# Preprocessing of Microbiome Data in R {-#frontpage}
 
 ```{r include=FALSE}
 library(DiagrammeR)
