--- a/03b_data_joining.Rmd
+++ b/03b_data_joining.Rmd
@@ -6,7 +6,7 @@
 > Creating an object that joins the metadata, microbial abundance, and taxonomy data simplifies the downstream analyses. The composite objects are in long-format and enables us to do any type of analysis we desire when exploring the results associated with **16S rRNA gene** or **metagenomics** sequencing data.
 ```
 
-Let' get started
+Let us get started
 
 
 ### Prerequisite
@@ -39,25 +39,16 @@ mo_otu_counts <- mo_otutable %>%
   pivot_longer(-otu, names_to = "sample_id", values_to = "count") %>% 
   relocate(sample_id, .before = otu)
 
-mo_glued_taxonomy <- mo_taxonomy %>% 
+taxonomy <- mo_taxonomy %>% 
   # mutate(pretty_otu = str_replace(string = otu,
   #                            pattern = "otu0*",
   #                            replacement = "OTU "),
   mutate(pretty_otu = str_replace(string = otu,
                              pattern = "phylo0*",
-                             replacement = "Phylotype "),
-        genus = str_replace(string = genus,
-                            pattern = "(.*)",
-                            replacement = "*\\1*"),
-        genus = str_replace(string = genus,
-                            pattern = "\\*(.*)_unclassified\\*",
-                            replacement = "Unclassified<br>*\\1*"),
-        genus_phylo = glue("{genus}<br>({pretty_otu})"))
-
-inner_join( mo_glued_taxonomy, mo_taxonomy, by = "otu")
-  
+                             replacement = "Phylotype "))
+   
 mo_composite <- inner_join(mo_metadata, mo_otu_counts, by = "sample_id") %>% 
-  inner_join( ., mo_glued_taxonomy, by = "otu") %>% 
+  inner_join( ., taxonomy, by = "otu") %>% 
   group_by(sample_id) %>% 
   mutate(rel_abund = count/sum(count)) %>% 
   ungroup() %>% 
@@ -72,8 +63,18 @@ mo_composite %>%
   summarise(total_re_abund = sum(rel_abund))
 
 mo_Rjoined_object <- mo_composite %>% 
-  pivot_longer(c(all_of(taxlevels), "otu", genus_phylo), names_to = "level", values_to = "taxon") %>% 
-  relocate(rel_abund, .after = taxon)
+  
+  # pivot_longer(c(all_of(taxlevels), "otu", genus_phylo), names_to = "level", values_to = "taxon") %>% 
+  pivot_longer(c(all_of(taxlevels), "otu"), names_to = "level", values_to = "taxon") %>% 
+  relocate(rel_abund, .after = taxon) %>% 
+  mutate(taxon = str_replace(string = taxon,
+                            pattern = "(.*)",
+                            replacement = "*\\1*"),
+        taxon = str_replace(string = taxon,
+                            pattern = "\\*(.*)_unclassified\\*",
+                            replacement = "Unclassified<br>*\\1*"),
+        taxon = str_replace_all(taxon, "_", " "),
+        taxon_phylo = glue("{taxon}<br>({pretty_otu})"))
 
 
 saveRDS(mo_composite, "RDataRDS/mo_composite.rds")
