--- a/03a_data_tidyng.Rmd
+++ b/03a_data_tidyng.Rmd
@@ -24,31 +24,127 @@ load("../iMAP-part2/RDataRDS/final-bioinfo_objects.RData", verbose = T)
 > Using Phylotype data
 <!-- > Using ASV data -->
 
+### Phylotype shared data
 ```{r}
 library(tidyverse)
-mo_otutable_long <- mo_phylo_shared_table %>% 
-  # select(-label, -numOtus) %>% 
-  select(-label, -numPhylos) %>%
-  # select(-label, -numASVs) %>% 
-  rename(sample_id = Group) %>% 
+otutable_long <- mo_phylo_shared_table %>%
+  rename_all(tolower) %>% 
+  select(-label, -numphylos) %>%
+  rename(sample_id = group) %>% 
   rename_all(tolower) %>% 
   pivot_longer(-sample_id, names_to="otu", values_to="count") %>% 
   filter(count != 0)
-saveRDS(mo_otutable_long, "RDataRDS/mo_otutable_long.rds")
+saveRDS(otutable_long, "RDataRDS/phylo_table_long.rds")
 
-mo_otutable <- mo_otutable_long %>%
+otutable <- otutable_long %>%
   pivot_wider(id_cols = otu, names_from = sample_id, values_from = count) %>%
   mutate_if(is.numeric, ~replace(., is.na(.), 0))
 
-cat("Dimension of the otutable\n")
-dim(mo_otutable)
-cat("\nStructure of the otutable\n")
-head(mo_otutable)[, 1:3] %>% as.data.frame()  
-saveRDS(mo_otutable, "RDataRDS/mo_otutable.rds")
+paste("Dimension of the phylotype table table is", 
+      dim(otutable)[1], "rows and", 
+      dim(otutable)[2], "columns") 
+saveRDS(otutable, "RDataRDS/phylo_otutable.rds")
 
 
 taxlevels <- c("kingdom", "phylum", "class", "order", "family", "genus")
-mo_taxonomy <- mo_phylo_cons_taxonomy %>%
+taxonomy <- mo_phylo_cons_taxonomy %>%
+  rename_all(tolower) %>%
+  select(otu, taxonomy) %>%
+  mutate(otu = tolower(otu),
+         taxonomy = str_replace_all(taxonomy, "\\(\\d+\\)", ""),
+         taxonomy = str_replace(taxonomy, ";unclassified", "_unclassified"),
+         taxonomy = str_replace_all(taxonomy, ";unclassified", ""),
+         taxonomy = str_replace_all(taxonomy, ";$", "")) %>% 
+  mutate(pretty_otu = str_replace(string = otu,
+                         pattern = "phylo0*",
+                         replacement = "Phylotype ")) %>% 
+  relocate(pretty_otu, .after = "otu") %>% 
+  separate(taxonomy, into = all_of(taxlevels), sep = ";")
+
+paste("Dimension of the taxonomy table is", 
+      dim(taxonomy)[1], "rows and", 
+      dim(taxonomy)[2], "columns")
+
+head(taxonomy)[, 1:4] %>% as.data.frame() 
+saveRDS(taxonomy, "RDataRDS/phylo_taxonomy.rds")
+
+save(otutable, otutable_long, taxonomy, file = "RDataRDS/phylo_taxonomy_objects.RData")
+save(otutable, otutable_long, taxonomy, file = "RDataRDS/saved_objects.RData")
+```
+
+
+### OPTI shared data
+```{r eval=FALSE, include=FALSE}
+library(tidyverse)
+otutable_long <- mo_opti_shared_table %>%
+  rename_all(tolower) %>% 
+  select(-label, -numotus) %>%
+  rename(sample_id = group) %>% 
+  rename_all(tolower) %>% 
+  pivot_longer(-sample_id, names_to="otu", values_to="count") %>% 
+  filter(count != 0)
+saveRDS(otutable_long, "RDataRDS/opti_table_long.rds")
+
+otutable <- otutable_long %>%
+  pivot_wider(id_cols = otu, names_from = sample_id, values_from = count) %>%
+  mutate_if(is.numeric, ~replace(., is.na(.), 0))
+
+paste("Dimension of the phylotype table table is", 
+      dim(otutable)[1], "rows and", 
+      dim(otutable)[2], "columns") 
+saveRDS(otutable, "RDataRDS/opti_otutable.rds")
+
+
+taxlevels <- c("kingdom", "phylum", "class", "order", "family", "genus")
+taxonomy <- mo_opti_cons_taxonomy %>%
+  rename_all(tolower) %>%
+  select(otu, taxonomy) %>%
+  mutate(otu = tolower(otu),
+         taxonomy = str_replace_all(taxonomy, "\\(\\d+\\)", ""),
+         taxonomy = str_replace(taxonomy, ";unclassified", "_unclassified"),
+         taxonomy = str_replace_all(taxonomy, ";unclassified", ""),
+         taxonomy = str_replace_all(taxonomy, ";$", "")) %>% 
+  mutate(pretty_otu = str_replace(string = otu,
+                         pattern = "otu0*",
+                         replacement = "OTU ")) %>% 
+  relocate(pretty_otu, .after = "otu") %>% 
+  separate(taxonomy, into = all_of(taxlevels), sep = ";")
+
+paste("Dimension of the taxonomy table is", 
+      dim(taxonomy)[1], "rows and", 
+      dim(taxonomy)[2], "columns")
+
+head(taxonomy)[, 1:4] %>% as.data.frame() 
+saveRDS(taxonomy, "RDataRDS/opti_taxonomy.rds")
+
+save(otutable, otutable_long, taxonomy, file = "RDataRDS/opti_taxonomy_objects.RData")
+resave(otutable, otutable_long, taxonomy, file = "RDataRDS/saved_objects.RData")
+```
+
+### ASV shared data
+```{r eval=FALSE, include=FALSE}
+library(tidyverse)
+otutable_long <- mo_asv_shared_table %>%
+  rename_all(tolower) %>% 
+  select(-label, -numasvs) %>%
+  rename(sample_id = group) %>% 
+  rename_all(tolower) %>% 
+  pivot_longer(-sample_id, names_to="otu", values_to="count") %>% 
+  filter(count != 0)
+saveRDS(otutable_long, "RDataRDS/asv_table_long.rds")
+
+otutable <- otutable_long %>%
+  pivot_wider(id_cols = otu, names_from = sample_id, values_from = count) %>%
+  mutate_if(is.numeric, ~replace(., is.na(.), 0))
+
+paste("Dimension of the phylotype table table is", 
+      dim(otutable)[1], "rows and", 
+      dim(otutable)[2], "columns") 
+saveRDS(otutable, "RDataRDS/asv_otutable.rds")
+
+
+taxlevels <- c("kingdom", "phylum", "class", "order", "family", "genus")
+taxonomy <- mo_asv_cons_taxonomy %>%
   rename_all(tolower) %>%
   select(otu, taxonomy) %>%
   mutate(otu = tolower(otu),
@@ -58,15 +154,18 @@ mo_taxonomy <- mo_phylo_cons_taxonomy %>%
          taxonomy = str_replace_all(taxonomy, ";$", "")) %>% 
   separate(taxonomy, into = all_of(taxlevels), sep = ";")
 
-cat("Dimension of the taxonomy table\n")
-dim(mo_taxonomy)
-cat("\nStructure of the taxonomy table\n")
-head(mo_taxonomy)[, 1:4] %>% as.data.frame() 
-saveRDS(mo_taxonomy, "RDataRDS/mo_taxonomy.rds")
+paste("Dimension of the taxonomy table is", 
+      dim(taxonomy)[1], "rows and", 
+      dim(taxonomy)[2], "columns")
 
-save(mo_otutable, mo_otutable_long, mo_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
-save(mo_otutable, mo_otutable_long, mo_taxonomy, file = "RDataRDS/saved_objects.RData")
+head(taxonomy)[, 1:4] %>% as.data.frame() 
+saveRDS(taxonomy, "RDataRDS/asv_taxonomy.rds")
+
+save(otutable, otutable_long, taxonomy, file = "RDataRDS/asv_taxonomy_objects.RData")
+resave(otutable, otutable_long, taxonomy, file = "RDataRDS/saved_objects.RData")
 ```
+
+
 
 
 ## Creating tidy `qiime2` taxa abundance table {#qiime2-otu-taxonomy}
@@ -74,6 +173,7 @@ save(mo_otutable, mo_otutable_long, mo_taxonomy, file = "RDataRDS/saved_objects.
 - The demo below extract and split abundance at genus-lineage.
 - Additional processing is also done to create a tidy dataframe.
 - The final out put will contain feature ID, taxonomy and abundance for each sample.
+
 ```{r}
 taxlevels <- c("kingdom", "phylum", "class", "order", "family", "genus")
 
@@ -126,7 +226,7 @@ cat("\nStructure of the taxonomy table\n")
 head(q2_taxonomy)[, 1:3] %>% as.data.frame() 
 saveRDS(q2_taxonomy, "RDataRDS/q2_taxonomy.rds")
 
-resave(q2_otutable, q2_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
+save(q2_otutable, q2_taxonomy, file = "RDataRDS/q2_otu_taxonomy_objects.RData")
 resave(q2_otutable, q2_taxonomy, file = "RDataRDS/saved_objects.RData")
 ```
 
@@ -176,7 +276,7 @@ cat("\nStructure of the taxonomy table\n")
 head(m3_taxonomy)[, 1:4] %>% as.data.frame() 
 saveRDS(m3_taxonomy, "RDataRDS/m3_taxonomy.rds")
 
-resave(m3_otutable, m3_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
+save(m3_otutable, m3_taxonomy, file = "RDataRDS/m3_otu_taxonomy_objects.RData")
 resave(m3_otutable, m3_taxonomy, file = "RDataRDS/saved_objects.RData")
 ```
 
@@ -219,7 +319,7 @@ cat("\nStructure of the taxonomy table\n")
 head(m3_read_counts_taxonomy)[, 1:4] %>% as.data.frame() 
 saveRDS(m3_read_counts_taxonomy, "RDataRDS/m3_read_counts_taxonomy.rds")
 
-resave(m3_read_counts_otutable, m3_read_counts_taxonomy, file = "RDataRDS/otutaxonomy_objects.RData")
+resave(m3_read_counts_otutable, m3_read_counts_taxonomy, file = "RDataRDS/m3_otu_taxonomy_objects.RData")
 resave(m3_read_counts_otutable, m3_read_counts_taxonomy, file = "RDataRDS/saved_objects.RData")
 ```
 
