--- a/index.Rmd
+++ b/index.Rmd
@@ -41,7 +41,7 @@ source(file = "R/common.R")
 if (!dir.exists("data")) {dir.create("data")}
 ```
 
-# Preprocessing of Microbiome Data in R {-#frontpage}
+# Microbiome Data Preprocessing in R {-#frontpage}
 
 ```{r include=FALSE}
 library(DiagrammeR)
